// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-if > basic v-if 1`] = `
"import { children as _children, renderEffect as _renderEffect, setText as _setText, createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    const { 0: [n3],} = _children(n2)
    _renderEffect(() => _setText(n3, _ctx.msg))
    return n2
  })
  return [n1]
}"
`;

exports[`compiler: v-if > comment between branches 1`] = `
"import { children as _children, createIf as _createIf, prepend as _prepend, renderEffect as _renderEffect, setText as _setText, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
const t1 = _template("<!--foo--><p></p>")
const t2 = _template("<!--bar-->fine")
const t3 = _template("<input>")

export function render(_ctx) {
  const n0 = t3()
  const { 0: [n5],} = _children(n0)
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.orNot), () => {
    const n3 = t1()
    return n3
  }, () => {
    const n4 = t2()
    return n4
  }))
  _prepend(n0, n1)
  _renderEffect(() => _setText(n5, _ctx.text))
  return n0
}"
`;

exports[`compiler: v-if > dedupe same template 1`] = `
"import { createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div>hello</div>")

export function render(_ctx) {
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  })
  const n3 = _createIf(() => (_ctx.ok), () => {
    const n4 = t0()
    return n4
  })
  return [n1, n3]
}"
`;

exports[`compiler: v-if > template v-if 1`] = `
"import { children as _children, renderEffect as _renderEffect, setText as _setText, createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>hello<p></p>")

export function render(_ctx) {
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    const { 2: [n3],} = _children(n2)
    _renderEffect(() => _setText(n3, _ctx.msg))
    return n2
  })
  return [n1]
}"
`;

exports[`compiler: v-if > v-if + v-else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
const t1 = _template("<p></p>")

export function render(_ctx) {
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => {
    const n3 = t1()
    return n3
  })
  return [n1]
}"
`;

exports[`compiler: v-if > v-if + v-else-if + v-else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
const t1 = _template("<p></p>")
const t2 = _template("fine")

export function render(_ctx) {
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.orNot), () => {
    const n3 = t1()
    return n3
  }, () => {
    const n4 = t2()
    return n4
  }))
  return [n1]
}"
`;

exports[`compiler: v-if > v-if + v-else-if 1`] = `
"import { createIf as _createIf, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")
const t1 = _template("<p></p>")

export function render(_ctx) {
  const n1 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.orNot), () => {
    const n3 = t1()
    return n3
  }))
  return [n1]
}"
`;
